--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.1",
+    "@auth/prisma-adapter": "^2.11.0",
+    "@octokit/webhooks": "^14.1.3",
+    "@prisma/client": "^6.18.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "@types/next-auth": "^3.13.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
+    "octokit": "^5.0.3",
     "prisma": "^6.16.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -26,6 +29,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "smee-client": "^4.4.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
