--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "smee":"node ./src/script/smee.js"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@octokit/webhooks": "^14.1.3",
-    "@prisma/client": "^6.18.0",
+    "@prisma/adapter-pg": "^7.0.1",
+    "@prisma/client": "^6.19.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@prisma/extension-optimize": "^2.0.1",
+    "@prisma/instrumentation": "^6.19.0",
     "@types/next-auth": "^3.13.0",
+    "dotenv": "^17.2.3",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "octokit": "^5.0.3",
-    "prisma": "^6.16.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -29,6 +34,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "prisma": "^6.19.0",
     "smee-client": "^4.4.1",
     "tailwindcss": "^4",
     "typescript": "^5"
