--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "smee":"node ./src/script/smee.js"
+    "smee": "node ./src/script/smee.js"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.0",
+    "@huggingface/inference": "^4.13.5",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@octokit/webhooks": "^14.1.3",
     "@prisma/adapter-pg": "^7.0.1",
@@ -22,7 +23,8 @@
     "dotenv": "^17.2.3",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
-    "octokit": "^5.0.3",
+    "octokit": "^5.0.5",
+    "openai": "^6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -32,11 +34,13 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^10.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "prisma": "^6.19.0",
     "smee-client": "^4.4.1",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
