--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ai-code-reviews",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
@@ -12,6 +13,8 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.0",
     "@huggingface/inference": "^4.13.5",
+    "@lancedb/lancedb": "^0.23.0",
+    "@langchain/core": "^1.1.8",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@octokit/webhooks": "^14.1.3",
     "@prisma/adapter-pg": "^7.0.1",
@@ -21,9 +24,11 @@
     "@prisma/instrumentation": "^6.19.0",
     "@types/next-auth": "^3.13.0",
     "dotenv": "^17.2.3",
+    "langchain": "^1.2.3",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "octokit": "^5.0.5",
+    "ollama": "^0.6.3",
     "openai": "^6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
