--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
@@ -23,6 +23,7 @@
     "@prisma/extension-optimize": "^2.0.1",
     "@prisma/instrumentation": "^6.19.0",
     "@types/next-auth": "^3.13.0",
+    "apache-arrow": "^21.1.0",
     "dotenv": "^17.2.3",
     "langchain": "^1.2.3",
     "next": "15.5.3",
